# src/index.js
@@ -10,7 +10,9 @@ const PORT = process.env.PORT || 3000;
 const competitionRoutes = require('./routes/competition.route');
 const registrationRoutes = require('./routes/registration.route');
 const paymentRoutes = require('./routes/payment.route');
-const authRoutes = require('./routes/auth.route');
+const userRoutes = require('./routes/user.route');
+const approvalRoutes = require('./routes/approval.route');
+
 
 app.use(bodyParser.json());
 app.use(cors());
@@ -21,7 +23,8 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 app.use('/competitions', competitionRoutes);
 app.use('/registrations', registrationRoutes);
 app.use('/payments', paymentRoutes);
-app.use('/auth', authRoutes);
+app.use('/users', userRoutes);
+app.use('/approvals', approvalRoutes);
 
 app.get('/', (req, res) => {
   res.send('Welcome to the Competition Registration API');
